fix: text-align on Mobile version (Thu, May 12, 2022 14:36 PM)

--- a/style.css
+++ b/style.css
@@ -195,7 +195,6 @@ p {
     }
 
     .slider-description p{
-        text-align: center;
         padding: 0;
     }
 
